--- a/Wheres_W_Joshik_Tutorial_version_2.ipynb
+++ b/Wheres_W_Joshik_Tutorial_version_2.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "13fc4bac",
    "metadata": {},
    "outputs": [],
@@ -115,13 +115,16 @@
     "import face_recognition as face_rec\n",
     "import jovian\n",
     "from IPython import display\n",
-    "from base64 import b64decode"
+    "from base64 import b64decode\n",
+    "from PIL import Image\n",
+    "import urllib.request\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "56143801",
+   "id": "f7cd26c7",
    "metadata": {},
    "outputs": [
     {
@@ -147,72 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "e8755acc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  ...\n",
-      "  [175 146 131]\n",
-      "  [176 147 132]\n",
-      "  [177 148 133]]\n",
-      "\n",
-      " [[ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  ...\n",
-      "  [175 146 131]\n",
-      "  [176 147 132]\n",
-      "  [177 148 133]]\n",
-      "\n",
-      " [[ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  ...\n",
-      "  [175 146 131]\n",
-      "  [176 147 132]\n",
-      "  [177 148 133]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  ...\n",
-      "  [ 79 130  92]\n",
-      "  [ 81 132  95]\n",
-      "  [ 79 130  93]]\n",
-      "\n",
-      " [[ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  ...\n",
-      "  [ 72 123  86]\n",
-      "  [ 75 126  89]\n",
-      "  [ 72 123  86]]\n",
-      "\n",
-      " [[ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  [ 17  17  17]\n",
-      "  ...\n",
-      "  [ 65 116  79]\n",
-      "  [ 68 119  82]\n",
-      "  [ 66 117  80]]]\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now find all faces in an image and then compare them to the target image, if they match highlight that face\n",
     "# and add the success message - \"Working when faces are detected and Robert is in the group or not\"\n",
     "\n",
-    "test_img = face_rec.load_image_file('1654171278402.jpeg')\n",
+    "url = \"https://github.com/smokinsnail/Wheres_W/blob/main/1654171278402.jpeg?raw=true\"\n",
+    "response = urllib.request.urlopen(url)\n",
+    "test_img = face_rec.load_image_file(response)\n",
+    "\n",
+    "\n",
+    "\n",
     "test_img = cv2.cvtColor(test_img,cv2.COLOR_BGR2RGB)\n",
     "face_location_test_img = face_rec.face_locations(test_img)\n",
     "encode_test_img = face_rec.face_encodings(test_img,face_location_test_img)\n",
@@ -262,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ab3f5bed",
    "metadata": {},
    "outputs": [
@@ -277,38 +228,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Updating notebook \"smokinsnail/wheres-w-joshik-tutorial-version-2\" on https://jovian.ai/\u001b[0m\n",
-      "[jovian] Uploading additional files...\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m[jovian] Error: File upload failed: (HTTP 400) Invalid filename or extension (Sample_Images/1654171278402.jpeg)\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Committed successfully! https://jovian.ai/smokinsnail/wheres-w-joshik-tutorial-version-2\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://jovian.ai/smokinsnail/wheres-w-joshik-tutorial-version-2'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -319,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84dcbdab",
+   "id": "5ff28cf7",
    "metadata": {},
    "outputs": [],
    "source": []
