--- a/Wheres_W_face_rec.ipynb
+++ b/Wheres_W_face_rec.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a1929280",
+   "metadata": {},
+   "source": [
+    "**Where's W Project**\n",
+    "\n",
+    "Inspired by the \"Where's Wally/Waldo\" books this project uses openCV for python and facial recognition to find a specified person within a group photo\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ef2a87c",
    "metadata": {},
    "source": [
@@ -12,7 +26,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "8d31e664",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +100,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50d873d8",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!pip install dlib face-recognition"
@@ -100,12 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "13fc4bac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import standard dependencies\n",
+    "# Import dependencies\n",
     "\n",
     "import cv2\n",
     "import os\n",
@@ -113,62 +131,42 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import face_recognition as face_rec\n",
-    "import jovian\n",
-    "from IPython import display\n",
-    "from base64 import b64decode\n",
     "from PIL import Image\n",
     "import urllib.request\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "f7cd26c7",
+   "cell_type": "markdown",
+   "id": "1ae8d37a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ncv2.imshow(\"Test Image\",test_img)\\ncv2.waitKey(0)\\ncv2.destroyAllWindows()\\ncv2.waitKey(1)\\n'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\n",
-    "\"\"\"\n",
-    "cv2.imshow(\"Test Image\",test_img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
-    "cv2.waitKey(1)\n",
-    "\"\"\""
+    "1.3 Start the programme"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "e8755acc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now find all faces in an image and then compare them to the target image, if they match highlight that face\n",
-    "# and add the success message - \"Working when faces are detected and Robert is in the group or not\"\n",
     "\n",
+    "# Load group image from github repository\n",
     "url = \"https://github.com/smokinsnail/Wheres_W/blob/main/1654171278402.jpeg?raw=true\"\n",
     "response = urllib.request.urlopen(url)\n",
     "test_img = face_rec.load_image_file(response)\n",
     "\n",
-    "\n",
-    "\n",
+    "#Adjust the image colour from BGR to RGB\n",
     "test_img = cv2.cvtColor(test_img,cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "#Find any faces in the test image\n",
     "face_location_test_img = face_rec.face_locations(test_img)\n",
+    "\n",
+    "#Encode the faces found in the test image (gives 128 facial reference points per face)\n",
     "encode_test_img = face_rec.face_encodings(test_img,face_location_test_img)\n",
     "\n",
-    "\n",
+    "#Set up an array to hold the details of the person to be found(saved as array to avoid loading photo each time)\n",
     "encode_person = np.ndarray(shape=(128,), dtype=float, order='F')\n",
     "encode_person = [-0.07901011,  0.12878096,  0.07996677, -0.02098858, -0.14011168,  0.01932599,\n",
     " -0.07499441, -0.16647424,  0.08260237, -0.10271854,  0.29843763,  0.05930148,\n",
@@ -194,14 +192,24 @@
     "  0.01764107,  0.10180254]\n",
     "\n",
     "\n",
-    "message = \"We didn't find Robert\"\n",
+    "\n",
+    "#Check the encoding of each face at each location to see whether it matches the person we are trying to find\n",
     "for face,location in zip(encode_test_img,face_location_test_img):\n",
     "    result = face_rec.compare_faces([encode_person],face)\n",
+    "    \n",
+    "     # If we find the person add a message near their face to say we have foudn them\n",
     "    if result[0] == True:\n",
     "        img_text = \"We found Robert!\"\n",
     "        cv2.putText(test_img, f'{img_text}', (location[3] - 150,location[0]- 50), cv2.FONT_HERSHEY_COMPLEX, 1, (0,255,255), 2 )\n",
+    "         \n",
+    "        # Draw a rectangle around their face\n",
     "        cv2.rectangle(test_img,(location[3],location[0]),(location[1],location[2]),(255,0,255),3)\n",
+    "        \n",
+    "        # Display the test photo with the message and rectangle added\n",
+    "        #This is displayed in a new window which may open behind browser or other open windows\n",
     "        cv2.imshow('Test Image', test_img)\n",
+    "        \n",
+    "        # Close the picture by clicking on it then pressing any key\n",
     "        cv2.waitKey(0)\n",
     "        cv2.destroyAllWindows()\n",
     "        cv2.waitKey(1)\n",
@@ -212,33 +220,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab3f5bed",
+   "cell_type": "markdown",
+   "id": "ee639115",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
+    "1.4 \n",
+    "**Further development:**\n",
     "\n",
-    "jovian.commit()"
+    "Error handling:\n",
+    "Cases where no faces are detected\n",
+    "Cases where the subject isn't found\n",
+    "Cases where the test image doesn't load correctly\n",
+    "\n",
+    "Usability:\n",
+    "Give the option of finding different people and chooseing different group photos\n",
+    "Build a version of the project with a GUI\n",
+    "Build a website version of the project\n",
+    "\n",
+    "Accuracy:\n",
+    "Try to improve the accuracy of the model buy including additional encoding of the person to be found\n",
+    "Give the option of finding different people and chooseing different group photos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff28cf7",
+   "id": "0e77aa55",
    "metadata": {},
    "outputs": [],
    "source": []
